plugins {
    id "java"
    id "application"
}

group "ru.craftysoft"
version "1.0.0"

sourceCompatibility = 14

dependencies {
    compile platform("org.apache.logging.log4j:log4j-bom:2.13.3")
    compile(
            "commons-cli:commons-cli:1.4",

            "org.apache.logging.log4j:log4j-api",
            "org.apache.logging.log4j:log4j-core"
    )
    testCompile(
            "org.junit.jupiter:junit-jupiter:5.6.2",
            "org.assertj:assertj-core:3.16.1"
    )
}

compileJava() {
    options.compilerArgs += ["--enable-preview"]
}

compileTestJava {
    options.compilerArgs += ["--enable-preview"]
}

test {
    useJUnitPlatform {
        excludeEngines "junit-vintage"
    }
    jvmArgs "--enable-preview"
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
    }
}

jar {
    mainClassName = "ru.craftysoft.csvanalyzer.Application"
    manifest {
        attributes("Main-Class": "$mainClassName")
    }
    from {
        configurations.compile.collect {
            it.isDirectory() ? it : zipTree(it)
        }
    }
}

repositories {
    mavenLocal()
    mavenCentral()
    jcenter()
}
